# ksz8851snl-rust

./: Cargo.toml  changelog.md  flake.nix  readme.md
.github/workflows/: release.yml
src/: device.rs  driver.rs  lib.rs  registers.rs
