[package]
name = "ksz8851snl"
description = "Low level register descriptions and driver for the KSZ8851SNL SPI Ethernet controller"
repository = "https://github.com/wlcxindustries/ksz8851snl-rust"
keywords = ["ksz8851snl", "ethernet", "driver", "microchip"]
categories = ["embedded", "no-std"]
version = "0.0.1"
license = "MIT"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
defmt = {version = "1.0.1", optional = true}
device-driver = { version = "1.0.6", default-features = false, features = ["defmt-03", "dsl"] }

[features]
# Currently *have* to use defmt because embedded-registers doesn't provide a way to turn it off
default = ["defmt"]
defmt = ["dep:defmt", "embedded-hal/defmt-03", "embedded-hal-async/defmt-03"]

